# pk-copilot

./: .gitignore  .mcp.json  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
agents/: be-analyst.md  cdisc-mapper.md  compliance-officer.md  data-curator.md  nca-analyst.md  pd-modeler.md  pk-modeler.md  report-writer.md
commands/: be.md  cdisc.md  lock.md  nca.md  pd-fit.md  pk-fit.md  sign.md  verify.md
docs/: 00-vision-and-positioning.md  01-architecture.md  02-roadmap.md  04-winnonlin-version-matrix.md  05-data-schemas.md  06-mcp-server.md  07-ux-and-commands.md  08-validation-strategy.md  09-cdisc-support.md  10-21cfr-part11.md  11-development-workflow.md  12-intended-use.md  13-compliance-matrix.md  14-llm-boundary-disclosure.md  README.md
docs/03-algorithms/: 01-nca-parameters.md  02-auc-methods.md  03-lambda-z-selection.md  04-bloq-handling.md  05-partial-auc.md  06-steady-state.md  07-bioequivalence.md  08-compartmental-models.md  09-pkpd-models.md  README.md
scripts/: golden_regen.py  run_r_noncompart.R  run_r_pknca.R
skills/audit-trail/: SKILL.md
skills/cdisc-mapping/: SKILL.md
skills/regulatory-validation/: SKILL.md
src/pkplugin/: __init__.py  audit.py  cli.py  ingest.py  mcp_server.py  sbom.py  schemas.py  units.py  version.py
src/pkplugin/cdisc/: __init__.py  adam.py  define_xml.py  paramcd.py  sdtm.py  validate.py
src/pkplugin/comp/: analytic.py  fitting.py  models.py  ode.py
src/pkplugin/compliance/: __init__.py  access.py  audit_chain.py  retention.py  signatures.py
src/pkplugin/nca/: auc.py  bioequivalence.py  bloq.py  engine.py  lambda_z.py  stats.py
src/pkplugin/pd/: fitting.py  models.py  predict.py
src/pkplugin/report/: html.py  pdf.py  plots.py  tables.py
src/pkplugin/validation/: __init__.py  diff.py  r_backend.py
tests/: test_access.py  test_audit_chain.py  test_audit_execution_mode.py  test_bioequivalence.py  test_cdisc_adam.py  test_cdisc_define_xml.py  test_cdisc_paramcd.py  test_cdisc_sdtm.py  test_cdisc_validate.py  test_cli.py  test_cli_part11.py  test_codex_review_fixes.py  test_compartmental_analytic.py  test_compartmental_fitting.py  test_compartmental_ode.py  test_descriptive_stats.py  test_golden_be_fda.py  test_golden_compartmental.py  test_golden_cross_version.py  test_golden_pd.py  test_golden_theophylline.py  test_lambda_z.py  test_mcp_be_integration.py  test_mcp_cdisc.py  test_mcp_compare.py  test_mcp_part11.py  test_mcp_pd_integration.py  test_mcp_pkfit_integration.py  test_mcp_report.py  test_nca_engine.py  test_part11_messaging.py  test_pd_fitting.py  test_pd_models.py  test_r_backend.py  test_report_html.py  test_report_plots.py  test_report_tables.py  test_retention.py  test_review_fixes.py  test_sbom.py  (+3 more)
tests/fixtures/: theophylline.csv
tests/golden/: README.md
tests/golden/cdisc/: dm.csv  ex.csv  lb.csv  pc.csv  vs.csv
tests/golden/cross-version/: expected_diffs.json
tests/golden/theophylline/: expected.json
tests/golden/winnonlin-5.3/: expected.json
tests/golden/winnonlin-6.4/: expected.json
tests/golden/winnonlin-8.3/: expected.json  synthetic_5_3.csv
