[project]
name = "pk-copilot"
version = "2.0.0"
description = "Phoenix WinNonlin-compatible PK/PD/NCA/Compartmental analysis for Claude Code"
authors = [{ name = "pk-copilot contributors", email = "kimmingul@gmail.com" }]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11,<3.14"
keywords = ["pharmacokinetics", "nca", "winnonlin", "pknca", "cdisc", "claude-code"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
  "numpy>=2.0,<3",
  "scipy>=1.13,<2",
  "pandas>=2.2,<3",
  "lmfit>=1.3,<2",
  "statsmodels>=0.14,<1",
  "pydantic>=2.7,<3",
  "pint>=0.24,<1",
  "matplotlib>=3.9,<4",
  "openpyxl>=3.1,<4",
  "pyreadstat>=1.2,<2",
  "pyarrow>=17,<25",
  "rich>=13,<15",
  "fastmcp>=2.0,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "hypothesis>=6",
  "ruff>=0.6",
  "mypy>=1.11",
]
mcp = ["fastmcp>=2.0,<3"]
plot = ["plotly>=5.22,<7"]
report = ["reportlab>=4.2,<5"]
cdisc = ["xmlschema>=3.0,<5"]
compliance = ["cryptography>=42"]
all = [
  "fastmcp>=2.0,<3",
  "plotly>=5.22,<7",
  "reportlab>=4.2,<5",
  "xmlschema>=3.0,<5",
  "cryptography>=42",
]

[project.urls]
Homepage = "https://github.com/kimmingul/pk-copilot"
Documentation = "https://github.com/kimmingul/pk-copilot/tree/main/docs"
Repository = "https://github.com/kimmingul/pk-copilot"
Issues = "https://github.com/kimmingul/pk-copilot/issues"

[project.scripts]
pkplugin = "pkplugin.cli:main"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pkplugin"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "golden: regression tests against canonical datasets",
  "property: hypothesis-based property tests",
  "r_backend: requires R + PKNCA installed",
  "slow: tests that take >5s",
]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RET", "ARG", "TID"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/pkplugin"]
plugins = ["pydantic.mypy"]
