[project]
name = "pk-copilot"
version = "2.0.2"
description = "Phoenix WinNonlin-compatible PK/PD/NCA/Compartmental analysis for Claude Code"
authors = [{ name = "pk-copilot contributors", email = "kimmingul@gmail.com" }]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11,<3.14"
keywords = ["pharmacokinetics", "nca", "winnonlin", "pknca", "cdisc", "claude-code"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
  "numpy>=2.0,<3",
  "scipy>=1.13,<2",
  "pandas>=2.2,<3",
  "lmfit>=1.3,<2",
  "statsmodels>=0.14,<1",
  "pydantic>=2.7,<3",
  "pint>=0.24,<1",
  "matplotlib>=3.9,<4",
  "openpyxl>=3.1,<4",
  "pyreadstat>=1.2,<2",
  "pyarrow>=17,<25",
  "rich>=13,<15",
  "fastmcp>=2.0,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "hypothesis>=6",
  "ruff>=0.6",
  "mypy>=1.11",
]
mcp = ["fastmcp>=2.0,<3"]
plot = ["plotly>=5.22,<7"]
report = ["reportlab>=4.2,<5"]
cdisc = ["xmlschema>=3.0,<5"]
compliance = ["cryptography>=42"]
all = [
  "fastmcp>=2.0,<3",
  "plotly>=5.22,<7",
  "reportlab>=4.2,<5",
  "xmlschema>=3.0,<5",
  "cryptography>=42",
]

[project.urls]
Homepage = "https://github.com/kimmingul/pk-copilot"
Documentation = "https://github.com/kimmingul/pk-copilot/tree/main/docs"
Repository = "https://github.com/kimmingul/pk-copilot"
Issues = "https://github.com/kimmingul/pk-copilot/issues"

[project.scripts]
pkplugin = "pkplugin.cli:main"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pkplugin"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "golden: regression tests against canonical datasets",
  "property: hypothesis-based property tests",
  "r_backend: requires R + PKNCA installed",
  "slow: tests that take >5s",
]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RET", "ARG", "TID"]
ignore = [
  "E501",   # line length handled by formatter
  "E402",   # local imports inside functions are an intentional fastmcp/optional-dep pattern
  "B905",   # zip() strict= — uniform-length use only; tests verify shapes elsewhere
  "SIM102", # nested if — readability sometimes preferred
  "SIM105", # contextlib.suppress vs try/except/pass — both OK
  "SIM108", # ternary vs if/else — readability preference
  "RET504", # assign-then-return — debugger-friendly pattern
  "ARG001", # unused function arguments — many impl_* keep MCP-required args for forward compat
  "UP042",  # str-Enum subclassing — keep until Python 3.11 floor is raised
  "UP007",  # X | Y vs Optional — both acceptable; Optional is more explicit
  "B007",   # unused loop variable — common in sweep-based tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = [
  "ARG001",  # unused fixtures are common in pytest
  "ARG002",  # unused method arguments in test classes
  "F841",    # unused local vars in test scaffolding
  "B007",    # unused loop variable in numerical sweeps
  "B904",    # bare raise inside test exception fixtures
  "B017",    # bare pytest.raises(Exception) — acceptable for cryptography-failure tests
  "F401",    # importlib.util.find_spec hint — not relevant in test imports
]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/pkplugin"]
plugins = ["pydantic.mypy"]
